[gd_scene load_steps=3 format=3 uid="uid://ctliw0bub5qtc"]

[ext_resource type="Script" path="res://scenes/ui/map.gd" id="1_ylkcl"]
[ext_resource type="Script" path="res://scripts/map_view.gd" id="2_4wsmq"]

[node name="map" type="Control"]
z_index = 3000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ylkcl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 16.0
offset_right = 1891.0
offset_bottom = 1064.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player List"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapContainer" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("2_4wsmq")

[node name="MapViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/MapContainer"]
handle_input_locally = false
size = Vector2i(1420, 950)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/HBoxContainer/MapContainer/MapViewport"]
zoom = Vector2(0.25, 0.25)
limit_left = -38400
limit_top = -21600
limit_right = 38400
limit_bottom = 21600

[node name="PlayerListContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PlayerListContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Close" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
